--- a/hw/arm/Kconfig
+++ b/hw/arm/Kconfig
@@ -33,6 +33,7 @@ config ARM_VIRT
     select ACPI_CXL
     select ACPI_HMAT
     select NVIDIA_BPMP_GUEST
+    select NVIDIA_GPIO_GUEST
 
 config CHEETAH
     bool
