--- a/hw/misc/Kconfig
+++ b/hw/misc/Kconfig
@@ -14,6 +14,9 @@ config ARMSSE_CPU_PWRCTRL
 config NVIDIA_BPMP_GUEST
     bool
 
+config NVIDIA_GPIO_GUEST
+    bool
+
 config ISA_DEBUG
     bool
     depends on ISA_BUS
